--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,25 @@
 		<glassfish.version>2.29.1</glassfish.version>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>windows</id>
+			<properties>
+				<spring.profiles.active>windows</spring.profiles.active>
+			</properties>
+		</profile>
+		<profile>
+			<id>linux</id>
+			<activation>
+				<!--默认激活-->
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<spring.profiles.active>linux</spring.profiles.active>
+			</properties>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.github.xabgesagtx</groupId>
@@ -58,6 +77,10 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
