--- a/src/main/resources/application-windows.yml
+++ b/src/main/resources/application-windows.yml
@@ -2,14 +2,14 @@ xhpay:
   front: windows
 
 bot:
-  token: 1375825521:AAEU1pio1gsTxp4glYVV6x1q5VktDDck7Ys
-  username: fulihao_bot
+  token: 1444237809:AAE6DRngUsbOurVt6o4lZIidNs2KOU7RyyE
+  username: fuli01_bot
 
 file:
   outputpath: C:\\Users\\Administrator\\Documents\\
   #outputpath: /home/yangzi/software/cloudSee/
   downloadpath: C:\\Users\\Administrator\\Documents\\Group.cfg
-  count: 1000
+  count: 100
   sleep: 20
 
 server:
@@ -17,3 +17,7 @@ server:
   port: 8081
   #项目名，如果不设定，默认是 /
   #context-path: /demo
+
+spring:
+  thymeleaf:
+    cache: false
