--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,17 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.16</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -104,6 +115,21 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
+			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<!--指定配置文件的名称。默认值:${basedir}/src/main/resources/generatorConfig.xml-->
+					<configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile>
+					<!--如果指定了该参数，如果生成的java文件存在已经同名的文件，新生成的文件会覆盖原有的文件。
+                    如果没有指定该参数，如果存在同名的文件，MBG会给新生成的代码文件生成一个唯一的名字(例如： MyClass.java.1, MyClass.java.2 等等)。
+                    重要: 生成器一定会自动合并或覆盖已经生成的XML文件。默认值:false-->
+					<overwrite>false</overwrite>
+					<!--如果指定该参数，执行过程会输出到控制台-->
+					<verbose>true</verbose>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
