--- a/src/main/resources/application-linux.yml
+++ b/src/main/resources/application-linux.yml
@@ -25,3 +25,15 @@ mythread:
   maxpoolsize: 128
   #队列长度
   queuecapacity: 99999
+
+spring:
+  datasource:
+    url: jdbc:mysql://192.168.0.103:3306/telegram?useUnicode=true&characterEncoding=utf-8
+    username: telegram
+    password: telegram
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml  #对应mapper映射xml文件所在路径
+  map-underscore-to-camel-case: true
+  type-aliases-package: com.github.xabgesagtx.example.entity  #对应实体类路径
