--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,8 @@
 					<!--如果指定了该参数，如果生成的java文件存在已经同名的文件，新生成的文件会覆盖原有的文件。
                     如果没有指定该参数，如果存在同名的文件，MBG会给新生成的代码文件生成一个唯一的名字(例如： MyClass.java.1, MyClass.java.2 等等)。
                     重要: 生成器一定会自动合并或覆盖已经生成的XML文件。默认值:false-->
-					<overwrite>false</overwrite>
+					<overwrite>true</overwrite>
+
 					<!--如果指定该参数，执行过程会输出到控制台-->
 					<verbose>true</verbose>
 				</configuration>
