--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,30 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+
+
+
+
+		<!--   20201213 添加redis模块      -->
+		<!--        引入缓存模块       -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<!--    jedis注入     -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+		<!--    redis注入  注意是有data 的-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -126,7 +150,8 @@
 					<!--如果指定了该参数，如果生成的java文件存在已经同名的文件，新生成的文件会覆盖原有的文件。
                     如果没有指定该参数，如果存在同名的文件，MBG会给新生成的代码文件生成一个唯一的名字(例如： MyClass.java.1, MyClass.java.2 等等)。
                     重要: 生成器一定会自动合并或覆盖已经生成的XML文件。默认值:false-->
-					<overwrite>true</overwrite>
+					<overwrite>false</overwrite>
+
 
 					<!--如果指定该参数，执行过程会输出到控制台-->
 					<verbose>true</verbose>
