--- a/src/main/resources/application-linux.yml
+++ b/src/main/resources/application-linux.yml
@@ -33,20 +33,22 @@ spring:
     password: telegram
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  redis:
+    port: 2689
+    password: iLoveYouYangGe
+    host: test.yangge666.top
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 500
+        min-idle: 0
+      lettuce:
+        shutdown-timeout: 30000
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml  #对应mapper映射xml文件所在路径
   map-underscore-to-camel-case: true
   type-aliases-package: com.github.xabgesagtx.example.entity  #对应实体类路径
 
-  #设置redis服务器
-redis:
-  host: 127.0.0.1   #redis的服务器地址
-  password:        #设置密码
-  jedis:
-    pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 500
-      min-idle: 0
-  lettuce:
-    shutdown-timeout: 30000
+
