--- a/src/main/resources/application-linux.yml
+++ b/src/main/resources/application-linux.yml
@@ -4,27 +4,28 @@ xhpay:
 bot:
   token: 1375825521:AAEU1pio1gsTxp4glYVV6x1q5VktDDck7Ys
   username: fulihao_bot
+  blackword: 2
 
 file:
   #outputpath: C:\\Users\\Administrator\\Documents\\
   outputpath: /home/yangzi/software/cloudSee/
   downloadpath: /home/yangzi/software/cloudSee/Group.cfg
   count: 2000000
-  sleep: 50
+  sleep: 0
 
 server:
   #端口号
-  port: 8081
+  port: 8082
   #项目名，如果不设定，默认是 /
   #context-path: /demo
 
 mythread:
   #核心线程数量
-  corepoolsize: 10
+  corepoolsize: 600
   #最大线程数量
-  maxpoolsize: 128
+  maxpoolsize: 620
   #队列长度
-  queuecapacity: 99999
+  queuecapacity: 99999999
 
 spring:
   datasource:
@@ -50,5 +51,4 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml  #对应mapper映射xml文件所在路径
   map-underscore-to-camel-case: true
   type-aliases-package: com.github.xabgesagtx.example.entity  #对应实体类路径
-
 
