--- a/src/main/resources/application-windows.yml
+++ b/src/main/resources/application-windows.yml
@@ -4,17 +4,19 @@ xhpay:
 bot:
   token: 1444237809:AAE6DRngUsbOurVt6o4lZIidNs2KOU7RyyE
   username: fuli01_bot
+  blackword: 2
+  isLinux: false
 
 file:
   outputpath: C:\\Users\\Administrator\\Documents\\
   #outputpath: /home/yangzi/software/cloudSee/
   downloadpath: C:\\Users\\Administrator\\Documents\\Group.cfg
-  count: 100
-  sleep: 20
+  count: 1000000
+  sleep: 5
 
 server:
   #端口号
-  port: 8082
+  port: 8083
   #项目名，如果不设定，默认是 /
   #context-path: /demo
 
@@ -31,12 +33,14 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml  #对应mapper映射xml文件所在路径
   map-underscore-to-camel-case: true
   type-aliases-package: com.github.xabgesagtx.example.entity  #对应实体类路径
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 mythread:
   #核心线程数量
-  corepoolsize: 10
+  corepoolsize: 40
   #最大线程数量
-  maxpoolsize: 128
+  maxpoolsize: 80
   #队列长度
   queuecapacity: 99999
 
